<resources>
    <string name="app_name">YandexTestProject</string>
    <string name="small_artist_photo">Small artist photo</string>
    <string name="artist_short_desc">This is Description</string>
    <string name="artist_title">This is Title</string>
    <string name="artist_small_img">Small artist photo</string>
    <string name="song_count_template">%1$d альбомов %2$d песен</string>
    <string name="cache_file_artists">cache_file_artists_file</string>
    <string name="big_photo_of_artist_desc">Big photo of artist</string>
    <string name="artist_tag_list">Genre list</string>
    <string name="artist_song_count">Albums and songs count</string>
    <string name="artist_biography_title">Биография</string>
    <string name="artist_biography">Биография артиста</string>
    <string name="main_activity_title">Исполнители</string>
    <string name="empty_data_text">Пустой список артистов</string>
    <string name="content_url">http://download.cdn.yandex.net/mobilization-2016/artists.json</string>
    <string name="artist_data_intent_extra">ArtistData</string>
</resources>
