<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/artist_big_img"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:contentDescription="@string/big_photo_of_artist_desc"
        android:src="@drawable/no_image" />

    <TextView
        android:id="@+id/artist_tag_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_weight="1"
        android:textColor="@color/colorGrey"
        android:text="@string/artist_tag_list"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/artist_song_count"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_weight="1"
        android:textColor="@color/colorGrey"
        android:text="@string/artist_song_count"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_weight="1"
        android:text="@string/artist_biography_title"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/artist_biography"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_weight="1"
        android:text="@string/artist_biography"
        android:textAppearance="?android:attr/textAppearanceMedium" />
</LinearLayout>