<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="10dp">

    <ImageView
        android:id="@+id/artist_small_img"
        android:contentDescription="@string/artist_small_img"
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:src="@drawable/no_image" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="5"
        android:orientation="vertical"
        android:paddingLeft="10dp">

        <TextView
            android:id="@+id/artist_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/artist_title"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/artist_tag_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/artist_short_desc" />

        <TextView
            android:id="@+id/artist_song_count"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/artist_short_desc"
            android:paddingTop="10dp" />
    </LinearLayout>

</LinearLayout>